[package]
name = "distributed-state-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = [ "v4", "v7", "js"]}
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.20"
thiserror = "1.0"
async-trait = "0.1"
tokio-util = "0.7"
futures = "0.3"